# CppAssignments

./: CMakeLists.txt  test.cpp  test.h
assignment1/: main.cpp  main.h  task1.cpp  task1.h  task10.cpp  task10.h  task11.cpp  task11.h  task12.cpp  task12.h  task13.cpp  task13.h  task14.cpp  task14.h  task15.cpp  task15.h  task16.cpp  task16.h  task162.cpp  task162.h  task2.cpp  task2.h  task3.cpp  task3.h  task4.cpp  task4.h  task5.cpp  task5.h  task6.cpp  task7.cpp  task7.h  task8.cpp  task8.h  task9.cpp  task9.h
assignment2/: task1.cpp  task1.h  task10.cpp  task10.h  task2.cpp  task2.h  task3.cpp  task3.h  task4.cpp  task4.h  task5.cpp  task5.h  task6.cpp  task6.h  task7.cpp  task7.h  task8.cpp  task8.h  task9.cpp  task9.h
assignment3/: practice.cpp  practice.h  task1.cpp  task1.h  task10.cpp  task10.h  task11.cpp  task11.h  task12.cpp  task12.h  task2.cpp  task2.h  task3.cpp  task3.h  task4.cpp  task4.h  task5.cpp  task5.h  task6.cpp  task6.h  task7.cpp  task7.h  task8.cpp  task8.h  task9.cpp  task9.h
assignment4/: task1.cpp  task2.cpp  task3.cpp  task4.cpp
