cmake_minimum_required(VERSION 4.0)
project(untitled)

set(CMAKE_CXX_STANDARD 20)

add_executable(untitled
        assignment1/task1.cpp
        assignment1/task1.h
        assignment1/task2.cpp
        assignment1/task2.h
        assignment1/main.cpp
        assignment1/main.h
        assignment1/task3.cpp
        assignment1/task3.h
        assignment1/task4.cpp
        assignment1/task4.h
        assignment1/task5.cpp
        assignment1/task5.h
        assignment1/task6.cpp
        assignment1/task6.h
        assignment1/task7.cpp
        assignment1/task7.h
        assignment1/task8.cpp
        assignment1/task8.h
        assignment1/task9.cpp
        assignment1/task9.h
        assignment1/task10.cpp
        assignment1/task10.h
        assignment1/task11.cpp
        assignment1/task11.h
        assignment1/task12.cpp
        assignment1/task12.h
        assignment1/task13.cpp
        assignment1/task13.h
        assignment1/task14.cpp
        assignment1/task14.h
        assignment1/task15.cpp
        assignment1/task15.h
        assignment1/task16.cpp
        assignment1/task16.h
)
